Bug 736245 - Mac: View Tabs height not aligned, too short. r=philipp

--- a/calendar/base/themes/pinstripe/calendar-views.css
+++ b/calendar/base/themes/pinstripe/calendar-views.css
@@ -96,6 +96,8 @@ tab[calview]:hover {
 
 tab[calview] > .tab-middle {
     font-size: 14px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .view-header {
